feat: finished main process

--- a/src/assets/color.scss
+++ b/src/assets/color.scss
@@ -3,12 +3,14 @@
   --color-white: #ffffff;
   --color-black: #161718;
   --color-dynamic-white: #fff;
-  --color-dynamic-black: #161718;
   --color-dynamic-gray: #898989;
+  --color-dynamic-black: #161718;
+  --color-dynamic-black-alpha: #16171866;
   .dark {
     --color-dynamic-white: #161718;
     --color-dynamic-black: #fff;
     --color-dynamic-gray: #888889;
+    --color-dynamic-black-alpha: #ffffff66;
   }
 }
 /* Dark Theme */
