--- a/src/assets/typography.scss
+++ b/src/assets/typography.scss
@@ -16,28 +16,28 @@
 
 @font-face {
 	font-family: 'Inter';
-	src: url('../fonts/Inter/Inter-Regular.ttf');
+	src: url('../fonts/Inter/Inter-Regular.otf');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
 }
 @font-face {
 	font-family: 'Inter';
-	src: url('../fonts/Inter/Inter-Medium.ttf');
+	src: url('../fonts/Inter/Inter-Medium.otf');
 	font-weight: 500;
 	font-style: normal;
 	font-display: swap;
 }
 @font-face {
 	font-family: 'Inter';
-	src: url('../fonts/Inter/Inter-SemiBold.ttf');
+	src: url('../fonts/Inter/Inter-SemiBold.otf');
 	font-weight: 600;
 	font-style: normal;
 	font-display: swap;
 }
 @font-face {
 	font-family: 'Inter';
-	src: url('../fonts/Inter/Inter-Bold.ttf');
+	src: url('../fonts/Inter/Inter-Bold.otf');
 	font-weight: 700;
 	font-style: normal;
 	font-display: swap;
@@ -85,6 +85,11 @@ span,b {
 	font-size: 14px;
 	font-weight: 500;
 	color: var(--color-dynamic-black);
+	line-height: 19px;
+	@include screen(767.98px) {
+		font-size: 12px;
+		line-height: auto;
+	}
 }
 
 .text-main-small {
@@ -92,6 +97,9 @@ span,b {
 	font-size: 12px;
 	font-weight: 500;
 	color: var(--color-dynamic-black);
+	@include screen(767.98px) {
+		font-size: 14px;
+	}
 }
 
 .text-comment {
