--- a/src/assets/typography.scss
+++ b/src/assets/typography.scss
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Montserrat';
-	src: url('../fonts/Montserrat/Montserrat-Medium.ttf');
+	src: url('./../fonts/Montserrat/Montserrat-Medium.ttf');
 	font-weight: 500;
 	font-style: normal;
 	font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
 	font-family: 'Montserrat';
-	src: url('../fonts/Montserrat/Montserrat-SemiBold.ttf');
+	src: url('./../fonts/Montserrat/Montserrat-SemiBold.ttf');
 	font-weight: 600;
 	font-style: normal;
 	font-display: swap;
@@ -16,28 +16,28 @@
 
 @font-face {
 	font-family: 'Inter';
-	src: url('../fonts/Inter/Inter-Regular.otf');
+	src: url('./../fonts/Inter/Inter-Regular.otf');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
 }
 @font-face {
 	font-family: 'Inter';
-	src: url('../fonts/Inter/Inter-Medium.otf');
+	src: url('./../fonts/Inter/Inter-Medium.otf');
 	font-weight: 500;
 	font-style: normal;
 	font-display: swap;
 }
 @font-face {
 	font-family: 'Inter';
-	src: url('../fonts/Inter/Inter-SemiBold.otf');
+	src: url('./../fonts/Inter/Inter-SemiBold.otf');
 	font-weight: 600;
 	font-style: normal;
 	font-display: swap;
 }
 @font-face {
 	font-family: 'Inter';
-	src: url('../fonts/Inter/Inter-Bold.otf');
+	src: url('./../fonts/Inter/Inter-Bold.otf');
 	font-weight: 700;
 	font-style: normal;
 	font-display: swap;
