--- a/src/assets/typography.scss
+++ b/src/assets/typography.scss
@@ -53,7 +53,7 @@ span,b {
 
 .text-username {
 	font-family: 'Inter';
-	font-size: 36px;
+	font-size: 30px;
 	font-weight: 700;
 	color: var(--color-dynamic-black);
 	@include screen(767.98px) {
@@ -64,7 +64,7 @@ span,b {
 
 .text-h1 {
 	font-family: 'Inter';
-	font-size: 20px;
+	font-size: 16px;
 	font-weight: 600;
 	color: var(--color-dynamic-black);
 	@include screen(767.98px) {
@@ -75,17 +75,17 @@ span,b {
 
 .text-h2 {
 	font-family: 'Inter';
-	font-size: 16px;
+	font-size: 13px;
 	font-weight: 500;
 	color: var(--color-dynamic-gray);
 }
 
 .text-main {
 	font-family: 'Montserrat';
-	font-size: 14px;
+	font-size: 12px;
 	font-weight: 500;
 	color: var(--color-dynamic-black);
-	line-height: 19px;
+	line-height: 16px;
 	@include screen(767.98px) {
 		font-size: 12px;
 		line-height: auto;
@@ -115,27 +115,27 @@ span,b {
 
 .text-comment-small {
 	font-family: 'Inter';
-	font-size: 12px;
+	font-size: 10px;
 	font-weight: 500;
 	color: var(--color-dynamic-gray);
 }
 
 .text-button {
-	font-family: 'Inter';
-	font-size: 14px;
-	font-weight: 600;
+	font-family: 'Montserrat';
+	font-size: 12px;
+	font-weight: 500;
 	color: var(--color-dynamic-black);
 	@include screen(1199.98px) {
-		font-size: 16px;
+		font-size: 14px;
 	}
 	@include screen(767.98px) {
-		font-size: 14px;
+		font-size: 12px;
 	}
 }
 
 .text-uppart {
 	font-family: "Inter";
-	font-size: 18px;
+	font-size: 15px;
 	font-weight: 600;
 	color: var(--color-dynamic-black);
 }
